2010-10-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-dired.el (gnus-dired-attach): Silence XEmacs 21.5 when compiling.

	* gnus-gravatar.el (gnus-gravatar-transform-address): Adjust avatars'
	position when (X-)Faces exist.
	(gnus-treat-from-gravatar, gnus-treat-mail-gravatar): Force displaying
	avatars when called interactively.

2010-10-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-gravatar.el (gnus-gravatar-too-ugly): Don't test if
	gnus-article-x-face-too-ugly is bound.

2010-10-12  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* rfc2231.el (rfc2231-parse-string): Ignore repeated parts.

	* nnimap.el (nnimap-request-rename-group): Unselect by selecting a
	mailbox that doesn't exist.

2010-10-12  Julien Danjou  <julien@danjou.info>

	* shr.el (shr-tag-img): Encode URL properly when retrieving.
	(shr-get-image-data): Encode URL properly when fetching from cache.
	(shr-tag-img): Use aligned-to spaces to align correctly images.

	* gnus-gravatar.el (gnus-gravatar-insert): Check if buffer is alive
	before inserting the Gravatar.

	* shr.el (shr-tag-img): Add align attribute support for <img>.

2010-10-12  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-gravatar.el (gnus-art): Required.

	* gnus-sum.el (gnus-summary-mark-as-unread-forward)
	(gnus-summary-mark-as-unread-backward, gnus-summary-mark-as-unread):
	Remove long obsoleted functions.

2010-10-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnimap.el (gnutls-negotiate): Silence the byte compiler.

	* gnus-art.el, gnus-cache.el, gnus-fun.el, gnus-group.el,
	gnus-picon.el, gnus-spec.el, gnus-sum.el, gnus-util.el, gnus.el,
	mail-source.el, message.el, mm-bodies.el, mm-decode.el, mm-extern.el,
	mm-util.el, mm-view.el, mml-smime.el, mml.el, mml1991.el, mml2015.el,
	nnfolder.el, nnheader.el, nnmail.el, nnmaildir.el, nnrss.el, nntp.el,
	rfc1843.el, sieve-manage.el, smime.el, spam.el:
	Fix comment for declare-function.

2010-10-11  Lars Magne Ingebrigtsen  <larsi@gnus.org>
